--- a/packages/Connectors/SUB-D9-FH-SH/package.json
+++ b/packages/Connectors/SUB-D9-FH-SH/package.json
@@ -1,6 +1,6 @@
 {
     "arcs": {},
-    "default_model": "00000000-0000-0000-0000-000000000000",
+    "default_model": "cc7d3e21-303c-424c-a615-163ea2ffda34",
     "dimensions": {},
     "grid_settings": {
         "current": {
@@ -14,7 +14,7 @@
                 1000000,
                 1000000
             ],
-            "spacing_square": 100000
+            "spacing_square": 200000
         },
         "grids": {}
     },
@@ -97,6 +97,12 @@
                 11200000
             ]
         },
+        "82e1ffd0-1098-4731-9402-3f49bbd60bb9": {
+            "position": [
+                -15500000,
+                -2600000
+            ]
+        },
         "8b0526a4-48c7-48a0-95ad-df7cfc52becd": {
             "position": [
                 9600000,
@@ -113,6 +119,12 @@
             "position": [
                 -9600000,
                 -2600000
+            ]
+        },
+        "b234a0bc-2320-46aa-9a39-018c8f7b9519": {
+            "position": [
+                -14900000,
+                -3300000
             ]
         },
         "bd181b3f-c9eb-485d-b456-6e4fabc75f5a": {
@@ -142,11 +154,23 @@
     },
     "keepouts": {},
     "lines": {
+        "01769c51-f5cf-40c9-b5a5-923a41ec0dd3": {
+            "from": "8b0526a4-48c7-48a0-95ad-df7cfc52becd",
+            "layer": 50,
+            "to": "476d7faf-f195-4814-ba5b-2d6a7574cd7d",
+            "width": 0
+        },
         "04acb9c2-c59b-4068-8744-5273432be1ac": {
             "from": "3921039e-b400-4e74-a756-71cb40382177",
             "layer": 20,
             "to": "3921039e-b400-4e74-a756-71cb40382177",
             "width": 300000
+        },
+        "05e4438d-ef7c-4b77-a0a2-39893ffe9ce5": {
+            "from": "a2d3fc21-301b-448b-9a8a-58a17595cc71",
+            "layer": 50,
+            "to": "0093f987-1ac7-4769-b58b-2934df463bc3",
+            "width": 0
         },
         "0d649f01-cdcd-4061-86d2-da55a4232769": {
             "from": "8b0526a4-48c7-48a0-95ad-df7cfc52becd",
@@ -154,11 +178,47 @@
             "to": "9cf1e4b3-6eb8-402b-a76d-e8862f631469",
             "width": 300000
         },
+        "1692e76f-8105-4d93-bafb-c59f9a7aaa93": {
+            "from": "20c332f9-b20c-4079-ae75-f113c9ce9c0d",
+            "layer": 50,
+            "to": "41b4a046-6277-4e3b-8647-fd91003587d5",
+            "width": 0
+        },
+        "1d87ecb1-e3e9-4394-adfa-c5616e331338": {
+            "from": "e23e5a13-e221-4aea-b688-61b5a7a8a735",
+            "layer": 50,
+            "to": "e23e5a13-e221-4aea-b688-61b5a7a8a735",
+            "width": 0
+        },
+        "2b368f61-96c9-43bc-8842-040ac5e66b35": {
+            "from": "476d7faf-f195-4814-ba5b-2d6a7574cd7d",
+            "layer": 50,
+            "to": "a2d3fc21-301b-448b-9a8a-58a17595cc71",
+            "width": 0
+        },
+        "2e197acb-758a-437f-acfe-0280dca3b150": {
+            "from": "476d7faf-f195-4814-ba5b-2d6a7574cd7d",
+            "layer": 50,
+            "to": "476d7faf-f195-4814-ba5b-2d6a7574cd7d",
+            "width": 0
+        },
         "40015c6f-7fcc-4304-8e5b-83fc37ec10d8": {
             "from": "476d7faf-f195-4814-ba5b-2d6a7574cd7d",
             "layer": 20,
             "to": "476d7faf-f195-4814-ba5b-2d6a7574cd7d",
             "width": 300000
+        },
+        "4577421a-6cbd-4d86-a91c-9c5bc7f161e5": {
+            "from": "80455d05-a480-43cb-b878-583c23a5129d",
+            "layer": 50,
+            "to": "bd181b3f-c9eb-485d-b456-6e4fabc75f5a",
+            "width": 0
+        },
+        "4dff0627-8124-46ec-8972-f0ed15c6c869": {
+            "from": "74410559-3eea-4da9-8869-c56afe4aa8bb",
+            "layer": 50,
+            "to": "9cf1e4b3-6eb8-402b-a76d-e8862f631469",
+            "width": 0
         },
         "4f162f03-c591-4cee-a7bc-e573755bd8ba": {
             "from": "bd181b3f-c9eb-485d-b456-6e4fabc75f5a",
@@ -172,11 +232,47 @@
             "to": "e23e5a13-e221-4aea-b688-61b5a7a8a735",
             "width": 200000
         },
+        "58514794-14c3-42a6-b8d3-5313f42662ce": {
+            "from": "db11d606-29cd-45c1-837f-aefbc0966ffc",
+            "layer": 50,
+            "to": "db11d606-29cd-45c1-837f-aefbc0966ffc",
+            "width": 0
+        },
         "5cff6839-a6f5-4488-a87a-47670ad7ca34": {
             "from": "bd181b3f-c9eb-485d-b456-6e4fabc75f5a",
             "layer": 20,
             "to": "803c528f-9709-4175-9966-8555a5349e3b",
             "width": 200000
+        },
+        "6503794a-ac7e-4409-bc27-b2fe02edf4a7": {
+            "from": "8b0526a4-48c7-48a0-95ad-df7cfc52becd",
+            "layer": 50,
+            "to": "3353c395-5264-4902-ae9e-4afa733ab628",
+            "width": 0
+        },
+        "67d5e029-7751-4104-9a12-1f444b9e705b": {
+            "from": "803c528f-9709-4175-9966-8555a5349e3b",
+            "layer": 50,
+            "to": "e23e5a13-e221-4aea-b688-61b5a7a8a735",
+            "width": 0
+        },
+        "691ac3f0-76e1-4864-a9b6-a5e9446b582e": {
+            "from": "3353c395-5264-4902-ae9e-4afa733ab628",
+            "layer": 50,
+            "to": "3353c395-5264-4902-ae9e-4afa733ab628",
+            "width": 0
+        },
+        "70f74973-506a-4b86-8a39-68f8214169db": {
+            "from": "72a0bb7e-58da-400e-b481-8b7c8114a5b1",
+            "layer": 50,
+            "to": "74410559-3eea-4da9-8869-c56afe4aa8bb",
+            "width": 0
+        },
+        "75b99b90-4684-43f9-a13b-4731642dde20": {
+            "from": "3d76f718-c7b6-413c-9298-ebbf6fef8ef0",
+            "layer": 50,
+            "to": "1fff3516-ccdd-4ea1-a8ec-179b6ae082df",
+            "width": 0
         },
         "787f3a4d-ad15-4bc5-9338-10b89ea4a0fb": {
             "from": "80455d05-a480-43cb-b878-583c23a5129d",
@@ -190,17 +286,47 @@
             "to": "db11d606-29cd-45c1-837f-aefbc0966ffc",
             "width": 300000
         },
+        "865177b3-236c-444e-abb8-0f3e156ff301": {
+            "from": "1fff3516-ccdd-4ea1-a8ec-179b6ae082df",
+            "layer": 50,
+            "to": "20c332f9-b20c-4079-ae75-f113c9ce9c0d",
+            "width": 0
+        },
+        "87871950-225b-4635-80c8-92f10fd5d043": {
+            "from": "9cf1e4b3-6eb8-402b-a76d-e8862f631469",
+            "layer": 50,
+            "to": "8b0526a4-48c7-48a0-95ad-df7cfc52becd",
+            "width": 0
+        },
         "8aee2ffe-21f1-498d-b353-1afa27a1c417": {
             "from": "0093f987-1ac7-4769-b58b-2934df463bc3",
             "layer": 20,
             "to": "a2d3fc21-301b-448b-9a8a-58a17595cc71",
             "width": 300000
         },
+        "8ff9ae92-8998-40b7-b21a-de14b989bfb7": {
+            "from": "0093f987-1ac7-4769-b58b-2934df463bc3",
+            "layer": 50,
+            "to": "db11d606-29cd-45c1-837f-aefbc0966ffc",
+            "width": 0
+        },
+        "95f7ff3d-c474-4348-a7f4-fffe86ad27f4": {
+            "from": "b234a0bc-2320-46aa-9a39-018c8f7b9519",
+            "layer": 50,
+            "to": "82e1ffd0-1098-4731-9402-3f49bbd60bb9",
+            "width": 0
+        },
         "a62e3ab0-fc72-457d-b0df-fc08c5948c42": {
             "from": "9cf1e4b3-6eb8-402b-a76d-e8862f631469",
             "layer": 20,
             "to": "74410559-3eea-4da9-8869-c56afe4aa8bb",
             "width": 300000
+        },
+        "b27a1e02-481e-47f3-b75a-83aaa36cbbd7": {
+            "from": "bd181b3f-c9eb-485d-b456-6e4fabc75f5a",
+            "layer": 50,
+            "to": "803c528f-9709-4175-9966-8555a5349e3b",
+            "width": 0
         },
         "b374683e-e737-4e23-beba-b8a00662bad8": {
             "from": "1fff3516-ccdd-4ea1-a8ec-179b6ae082df",
@@ -268,6 +394,24 @@
             "to": "72a0bb7e-58da-400e-b481-8b7c8114a5b1",
             "width": 300000
         },
+        "d368e4b2-fcb9-41b8-a4a8-51bb28401629": {
+            "from": "41b4a046-6277-4e3b-8647-fd91003587d5",
+            "layer": 50,
+            "to": "72a0bb7e-58da-400e-b481-8b7c8114a5b1",
+            "width": 0
+        },
+        "d6a38533-5f76-45ce-ae78-7ab113b7f1e0": {
+            "from": "3921039e-b400-4e74-a756-71cb40382177",
+            "layer": 50,
+            "to": "476d7faf-f195-4814-ba5b-2d6a7574cd7d",
+            "width": 0
+        },
+        "e7313b97-8214-4834-87f3-88095b8bac3c": {
+            "from": "82e1ffd0-1098-4731-9402-3f49bbd60bb9",
+            "layer": 50,
+            "to": "82e1ffd0-1098-4731-9402-3f49bbd60bb9",
+            "width": 0
+        },
         "e9e8f3c7-94de-4f2a-89b5-47381416ae52": {
             "from": "1fff3516-ccdd-4ea1-a8ec-179b6ae082df",
             "layer": 20,
@@ -282,7 +426,17 @@
         }
     },
     "manufacturer": "",
-    "models": {},
+    "models": {
+        "cc7d3e21-303c-424c-a615-163ea2ffda34": {
+            "filename": "3d_models/Connector/DB9-FH.STEP",
+            "pitch": 32768,
+            "roll": 49152,
+            "x": 0,
+            "y": 9400000,
+            "yaw": 0,
+            "z": 5700000
+        }
+    },
     "name": "SUB-D9-FH-SH",
     "pads": {
         "39d08047-fc47-4e10-9804-0f04511cc89e": {
@@ -296,8 +450,8 @@
                 "angle": 0,
                 "mirror": false,
                 "shift": [
-                    -2743200,
-                    -1270000
+                    -2743000,
+                    -1420000
                 ]
             }
         },
@@ -312,8 +466,8 @@
                 "angle": 0,
                 "mirror": false,
                 "shift": [
-                    2743200,
-                    -1270000
+                    2743000,
+                    -1420000
                 ]
             }
         },
@@ -328,8 +482,8 @@
                 "angle": 0,
                 "mirror": false,
                 "shift": [
-                    -5486400,
-                    -1270000
+                    -5486000,
+                    -1420000
                 ]
             }
         },
@@ -344,8 +498,8 @@
                 "angle": 0,
                 "mirror": false,
                 "shift": [
-                    -4114800,
-                    1270000
+                    -4115000,
+                    1420000
                 ]
             }
         },
@@ -361,7 +515,7 @@
                 "mirror": false,
                 "shift": [
                     0,
-                    -1270000
+                    -1420000
                 ]
             }
         },
@@ -376,8 +530,8 @@
                 "angle": 0,
                 "mirror": false,
                 "shift": [
-                    -1371600,
-                    1270000
+                    -1372000,
+                    1420000
                 ]
             }
         },
@@ -408,8 +562,8 @@
                 "angle": 0,
                 "mirror": false,
                 "shift": [
-                    5486400,
-                    -1270000
+                    5486000,
+                    -1420000
                 ]
             }
         },
@@ -424,8 +578,8 @@
                 "angle": 0,
                 "mirror": false,
                 "shift": [
-                    1371600,
-                    1270000
+                    1372000,
+                    1420000
                 ]
             }
         },
@@ -440,8 +594,8 @@
                 "angle": 0,
                 "mirror": false,
                 "shift": [
-                    4114800,
-                    1270000
+                    4115000,
+                    1420000
                 ]
             }
         },
@@ -462,9 +616,66 @@
             }
         }
     },
-    "parameter_program": "",
-    "parameter_set": {},
-    "polygons": {},
+    "parameter_program": "32.000mm 21.800mm\nget-parameter [ courtyard_expansion ]\n2 * +xy\nset-polygon [ courtyard rectangle 0.000mm 6.900mm ]",
+    "parameter_set": {
+        "courtyard_expansion": 250000
+    },
+    "polygons": {
+        "49e6fd16-4380-4619-9f4b-8239b8957182": {
+            "layer": 60,
+            "parameter_class": "courtyard",
+            "vertices": [
+                {
+                    "arc_center": [
+                        0,
+                        0
+                    ],
+                    "arc_reverse": false,
+                    "position": [
+                        -16250000,
+                        -4250000
+                    ],
+                    "type": "line"
+                },
+                {
+                    "arc_center": [
+                        0,
+                        0
+                    ],
+                    "arc_reverse": false,
+                    "position": [
+                        -16250000,
+                        18050000
+                    ],
+                    "type": "line"
+                },
+                {
+                    "arc_center": [
+                        0,
+                        0
+                    ],
+                    "arc_reverse": false,
+                    "position": [
+                        16250000,
+                        18050000
+                    ],
+                    "type": "line"
+                },
+                {
+                    "arc_center": [
+                        0,
+                        0
+                    ],
+                    "arc_reverse": false,
+                    "position": [
+                        16250000,
+                        -4250000
+                    ],
+                    "type": "line"
+                }
+            ]
+        }
+    },
     "rules": {
         "clearance_package": {
             "clearance_silkscreen_cu": 200000,
@@ -483,7 +694,42 @@
         "horz",
         "sub-d"
     ],
-    "texts": {},
+    "texts": {
+        "69cd668d-ab27-4b1f-af73-92b8f5df7a11": {
+            "font": "simplex",
+            "from_smash": false,
+            "layer": 20,
+            "origin": "center",
+            "placement": {
+                "angle": 0,
+                "mirror": false,
+                "shift": [
+                    -1400000,
+                    8900000
+                ]
+            },
+            "size": 1000000,
+            "text": "$RD",
+            "width": 150000
+        },
+        "ea072065-fce9-4f70-84a0-13d02867aac4": {
+            "font": "simplex",
+            "from_smash": false,
+            "layer": 50,
+            "origin": "center",
+            "placement": {
+                "angle": 0,
+                "mirror": false,
+                "shift": [
+                    -2100000,
+                    5000000
+                ]
+            },
+            "size": 1500000,
+            "text": "$RD",
+            "width": 0
+        }
+    },
     "type": "package",
     "uuid": "9c069bdf-2347-41f7-b0a4-a09f9a747fb8"
 }
